--- a/style.css
+++ b/style.css
@@ -79,7 +79,84 @@ a:hover{
 	margin-top:100px ;
 	margin-right: 20px;
 
+
 }
+/*responsive*/
+@media screen and (max-width: 1110px){
+	.home-section{
+		display: block;
+		width: 100%;
+		overflow: scroll;
+}
+.about{
+	margin-left: 50px;
+	margin-top: 30px;
+}
+.menu{
+	width:100% ;
+	height: 30vh;
+	padding-top:15px ;
+	line-height:25px ;
+
+}
+.logo{
+	display: none;
+}
+.home-content{
+	display: block;
+	align-items: center;
+	justify-content:center ;
+	align-items: center;
+}
+.aagya-image{
+	align-items: center;
+	height:300px ;
+	justify-content: center;
+	/*margin-left: 200px;*/
+	margin-right: 50px;
+	float:right ;
+	margin-bottom:50px ;
+
+}
+#intro{
+	line-height: 50px;
+
+}
+/*responsive at min*/
+@media screen and (max-width: 550px){
+	.home-selection{
+		overflow: scroll;
+	}
+	#intro{
+		color: red;
+        font-size: 25px;
+        font-weight: bold;
+        letter-spacing: 1px;
+        word-spacing: 1px;
+        line-height: 30px;
+    }
+    #intro-para{
+    	word-spacing: 1px;
+    	letter-spacing: 0.5px;
+    }
+    .menu{
+    	line-height: 15px;
+    }
+    li a{
+    	font-size: 10px;
+    }
+    .aagya-image{
+    	align: center;
+    	height:250px ;
+    	margin: 10px;
+    	margin-left: 90px;
+    }
+    .about{
+    	margin-right: 5px;
+    	margin-left: 30px;
+    	margin-top: 25px;
+    	margin-bottom: 15px;
+    }
 /*========style for contact=======*/
 .contact-selection{
 	height:100% ;
@@ -152,5 +229,7 @@ textarea{
 	textarea{
 		width: 30%;
 		height: 100px;
-	}
+	
+}
+
 }
