--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
 	box-sizing: border-box;
 	list-style: none;
 }
+body{
+	background-image: url(wbc.jpg)
+}
 .home-selection{
 	/*background-image: url("home.jpg");*/
 	background-color: pink;
@@ -26,15 +29,18 @@
 }
 ul{
 	padding-bottom: 20%;
+	
 
 }
 li{
 	text-transform: uppercase;
+
 }
 li a{
 	text-decoration: none;
 	font-size: 20px;
 	color: red;
+	text-align: right;
 }
 .logo{
 	mrgin-top: 65%;
@@ -62,8 +68,10 @@ a:hover{
 #intro{
 	color:red ;
 	font-size:40px ;
-	font-weight:3px ;
+	font-weight:bold;
 	line-height: 85px;
+	letter-spacing: 3px;
+	word-spacing: 4px;
 }
 #intro-para{
 	text-indent:10px ;
@@ -74,7 +82,7 @@ a:hover{
 }
 .aagya-image{
 	height: 400px;
-	border: 1px rgb(223,11,46) ;
+	border: 1px rgb(223,11,46) solid;
 	border-radius: 50%;
 	margin-top:100px ;
 	margin-right: 20px;
@@ -146,7 +154,7 @@ a:hover{
     	font-size: 10px;
     }
     .aagya-image{
-    	align: center;
+    	align-items: center;
     	height:250px ;
     	margin: 10px;
     	margin-left: 90px;
@@ -231,5 +239,179 @@ textarea{
 		height: 100px;
 	
 }
+/*=====Cv======*/
+.center{
+	text-decoration: underline;
+    font-size: 17px;
+    padding: 4px 7px;
+}
+.cv-content-info{
+	padding-top:17px ;
+	width:23 ;
+	text-align:center ;
+	padding-left:20px ;
+	padding-right:20px ;
+}
+.cv-content{
+	display: flex;
+	width: 100%;
+	overflow: hidden;
+}
+.cv-count{
+	text-transformation: capitalize;
+}
+.cv-main-content{
+	dispaly: block;
+	width: 100px;
+}
+.name-dp{
+       display: flex;
+       height: 17vh;
+       background-color: black;
+       width: 100%;
 
 }
+.cv-dp{
+	width: 100px ;
+	border: 1px solid white;
+	border-radius: 50%;
+	height: 100px;
+	margin: 5px 40px;
+}
+.about-me{
+	margin-left: 90px;
+} 
+.name{
+    font-size: 40px;
+    line-height: 60px;
+    font-weight: bold;
+    letter-spacing: 3px;
+    word-spacing: 3px;
+}
+.cv-intro{
+	font-size: 17px;
+	font-weight: bold;
+	color: darkgreen;
+	letter-spacing: 2px;
+	word-spacing: 1px;
+}
+.resume{
+	display: flex;
+	height: 83vh;
+	width: 100%;
+
+}
+.my-info{
+	height: 100%;
+	width: 30%;
+	padding: 10px 15px;
+}
+.my-content-info{
+	height: 100%;
+	width:77% ;
+	backgrounf-color:brown ;
+	display:block ;
+	padding-top: 25px;
+	padding-left: 50px;
+	padding-right:20px ;
+
+}
+.cv-list{
+	text-tranform: none;
+}
+/*-----responsive---------*/
+@media screen and (max-width: 1110px){
+	.cv-content{
+		display: block;
+	}
+	.cv-main-containt{
+		display: block;
+		width: 100%;
+	}
+	.name-dp{
+		display: flex;
+		height: 20vh;
+		background-color: pink;
+		width: 100%;
+	}
+	.name{
+		font-size: 40px;
+		line-height: 50px;
+		font-weight: bold;
+		letter-spacing: 5px;
+		word-spacing: 3px;
+		padding-top: 20px;
+	}
+	.resume{
+		display: block;
+		height: 100%;
+		width: 100%;
+
+		align-items: center;
+	}
+	.my-info{
+		height: 100%;
+		width: 100%;
+		background-color: brown;
+		padding: 10px 15px;
+	}
+	.cv-contact-info{
+		text-align: center;
+		width: 100%;
+	}
+	.my-content-info{
+		height: 100%;
+		width: 100%;
+		display: block;
+	}
+
+}
+@media screen and (max-width: 550px){
+	.cv-contact{
+		display: block;
+	}
+	.name-dp{
+		display: flex;
+		height: 30vh;
+		background-color: darkgreen;
+		width: 100%;
+
+	}
+	.name{
+		font-size: 25px;
+		line-height: 35px;
+		font-weight: bold;
+		word-spacing: 3px;
+        letter-spacing: 5px;
+        padding-top: 20px;
+	}
+	.my-info{
+		height: 100%;
+		width: 100%;
+		background-color: brown;
+		padding: 10px 15px;
+	}
+	.name-dp{
+		align-items: center;
+		dispaly: block;
+		height: 50vh;
+	}
+	.cv-dp{
+		width: 200px;
+		border: 1px solid white;
+		border-radius: 50%;
+		height: 200px;
+		align-items: center;
+	}
+	.name{
+		padding-right: 20px;
+	}
+	.my-content-info{
+		height: 100%;
+		width: 100%;
+		display: block;
+		padding: 50px;
+	}
+	.cv-contact-info{
+		padding: 50px;
+	}
