--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
 	padding: 0;
 	box-sizing: border-box;
 	list-style: none;
+
+
+
 }
-body{
-	background-image: url(wbc.jpg)
-}
-.home-selection{
+.home-section{
 	/*background-image: url("home.jpg");*/
 	background-color: pink;
 	height: 100vh;
@@ -19,7 +19,7 @@ body{
 	display: block;
 	left: 0;
 	width: 35vh;
-	background-color: rgh(0,0,17);
+	background-color: rgb(0,0,17);
 	height:100vh ;
 	text-align: center;
 	padding-top: 50px;
@@ -30,23 +30,27 @@ body{
 ul{
 	padding-bottom: 20%;
 	
+	
 
 }
 li{
 	text-transform: uppercase;
+	
+	
 
 }
 li a{
 	text-decoration: none;
 	font-size: 20px;
-	color: red;
-	text-align: right;
+	color: white;
+	
 }
 .logo{
-	mrgin-top: 65%;
+	margin-top: 65%;
 	text-align: center;
 	border: 2px solid white;
 	border-radius: 50%;
+	background-color: rgb(12,12, 51);
 	color: red;
 	margin-left: 10px;
 	margin-right: 10px;
@@ -54,7 +58,8 @@ li a{
 }
 a:hover{
 	background-color: gold;
-       color:black ;
+       color:black;
+      
 }
 /*home content*/
 .home-content{
@@ -78,7 +83,8 @@ a:hover{
 	font-size: 20px;
 	font-weight:bold ;
 	text-align: center;
-	letter-spacing: 3px;
+	justify-content: center;
+	letter-spacing: 2px;
 }
 .aagya-image{
 	height: 400px;
@@ -102,7 +108,7 @@ a:hover{
 }
 .menu{
 	width:100% ;
-	height: 30vh;
+	height: 20vh;
 	padding-top:15px ;
 	line-height:25px ;
 
@@ -132,7 +138,7 @@ a:hover{
 }
 /*responsive at min*/
 @media screen and (max-width: 550px){
-	.home-selection{
+	.home-section{
 		overflow: scroll;
 	}
 	#intro{
@@ -149,6 +155,7 @@ a:hover{
     }
     .menu{
     	line-height: 15px;
+    	height: 15vh;
     }
     li a{
     	font-size: 10px;
@@ -166,7 +173,7 @@ a:hover{
     	margin-bottom: 15px;
     }
 /*========style for contact=======*/
-.contact-selection{
+.contact-section{
 	height:100% ;
 	width: 100%;
 	background-color:rgb(236,103,125) ;
@@ -176,7 +183,7 @@ a:hover{
 .contact-content{
 	display:block ;
 	width: 100%;
-	padding: 70px;
+	padding: 7px;
 
 }
 .contact-info{
@@ -186,6 +193,12 @@ a:hover{
 	padding-bottom:20px ;
 	padding-top: 2px;
 
+}
+.contact-head{
+	padding: 15px;
+	color: white;
+	text-docoration: underline;
+	display: block;
 }
 .mail{
 	color: black;
@@ -227,17 +240,19 @@ textarea{
 	border-radius: 30px;
 	color: white;
 	border: 1px solid white;
-	background-color:rgb(172,28,52) ;
+	background-color:rgb(172, 28, 52) ;
 }
 /*=====Responsive Dessign for contact page=====*/
 @media screen and (max-width: 1110px){
-	.contact-selection{
+	.contact-section{
 		display: block;
 	}
 	textarea{
 		width: 30%;
 		height: 100px;
+	}
 	
+
 }
 /*=====Cv======*/
 .center{
@@ -245,9 +260,9 @@ textarea{
     font-size: 17px;
     padding: 4px 7px;
 }
-.cv-content-info{
+.cv-contact-info{
 	padding-top:17px ;
-	width:23 ;
+	width:23%;
 	text-align:center ;
 	padding-left:20px ;
 	padding-right:20px ;
@@ -258,16 +273,16 @@ textarea{
 	overflow: hidden;
 }
 .cv-count{
-	text-transformation: capitalize;
+	text-transform: capitalize;
 }
 .cv-main-content{
 	dispaly: block;
-	width: 100px;
+	width: 100%;
 }
 .name-dp{
        display: flex;
        height: 17vh;
-       background-color: black;
+       background-color:pink;
        width: 100%;
 
 }
@@ -299,17 +314,19 @@ textarea{
 	display: flex;
 	height: 83vh;
 	width: 100%;
+	background-color:rgb(236, 232, 232);
 
 }
 .my-info{
 	height: 100%;
 	width: 30%;
 	padding: 10px 15px;
+	background-color: brown;
 }
 .my-content-info{
 	height: 100%;
 	width:77% ;
-	backgrounf-color:brown ;
+	backgrounf-color:rgb(236, 220, 220);
 	display:block ;
 	padding-top: 25px;
 	padding-left: 50px;
@@ -317,14 +334,14 @@ textarea{
 
 }
 .cv-list{
-	text-tranform: none;
+	text-transform: none;
 }
 /*-----responsive---------*/
 @media screen and (max-width: 1110px){
 	.cv-content{
 		display: block;
 	}
-	.cv-main-containt{
+	.cv-main-content{
 		display: block;
 		width: 100%;
 	}
@@ -367,13 +384,13 @@ textarea{
 
 }
 @media screen and (max-width: 550px){
-	.cv-contact{
+	.cv-content{
 		display: block;
 	}
 	.name-dp{
 		display: flex;
 		height: 30vh;
-		background-color: darkgreen;
+		background-color:pink;
 		width: 100%;
 
 	}
@@ -447,4 +464,39 @@ h4{
 }
 #menu-portfolio{
 	height: 30vh;
+}
+/*sitereport section*/
+.sitereport-section{
+	display: flex;
+	width: 100%;
+	background-color: rgb(239, 248, 248);
+} 
+.sitereport-content{
+	width: 100%;
+}
+.site-main-head{
+	text-align: center;
+	background-color: rgb(235, 68 ,96);
+	text-transform: uppercase;
+	color: white;
+	letter-spacing: 3px;
+	padding: 10px;
+}
+.learning-experience{
+	background-color: blanchedalmond;
+	padding: 10px 15px;
+	text-align: justify;
+}
+.title-sitereport{
+	text-decoration: underline;
+	letter-spacing: 1px;
+	padding-bottom: 5px;
+}
+.module-experience{
+	background-color: rgb(251 , 244, 235);
+	padding: 0px 17px;
+}
+.design-decision{
+	padding: 10px 15px;
+	background-color: rgb(243, 234, 234);
 }
