--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a:hover{
 	font-weight:bold ;
 	text-align: center;
 	justify-content: center;
-	letter-spacing: 2px;
+	letter-spacing: 3px;
 }
 .aagya-image{
 	height: 400px;
@@ -291,7 +291,7 @@ textarea{
 	border: 1px solid white;
 	border-radius: 50%;
 	height: 100px;
-	margin: 5px 40px;
+	margin: 5px 40px
 }
 .about-me{
 	margin-left: 90px;
@@ -300,7 +300,7 @@ textarea{
     font-size: 40px;
     line-height: 60px;
     font-weight: bold;
-    letter-spacing: 3px;
+    letter-spacing: 5px;
     word-spacing: 3px;
 }
 .cv-intro{
@@ -329,6 +329,7 @@ textarea{
 	backgrounf-color:rgb(236, 220, 220);
 	display:block ;
 	padding-top: 25px;
+
 	padding-left: 50px;
 	padding-right:20px ;
 
@@ -432,30 +433,40 @@ textarea{
 	.cv-contact-info{
 		padding: 50px;
 	}
+}
 	/*portfolio*/
 	#portfolio{
 		display: flex;
+		
 	}
+
 	.menu{
 		position: sticky;
+		top: 0;
+		
 	}
-	.main{
-        max-width: 1000px;
-        margin: auto;
+	#p-content{
+		width: 100%;
+		display: block;
 	}
-h4{
-	color: white ;
-	font-size: 80px;
-
+	#home-content{
+		height: 100%;
+		width: 100%;
 }
-.row{
-	margin: 5px 12px;
+#cv-wall{
+	background image: url(wbc.jpg);
+	width: 100%;
+	height: 100vh;
+	background-size: cover;
+	background-repeat: no repeat;
+}
+footer{
+	background-color: black;
+	text-align: center;
+	height: 15vh;
+	width: 100%;
 	color: white;
-
-}
-.column{
-	float: left;
-	width: 50%;
+	padding: 20px;
 }
 @media screen and (max-width: 1150px){
 	#portfolio{
