--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 	display: block;
 	left: 0;
 	width: 35vh;
-	background-color: rgb(0,0,17);
+	background-color: rgb(0, 0, 17);
 	height:100vh ;
 	text-align: center;
 	padding-top: 50px;
@@ -50,7 +50,7 @@ li a{
 	text-align: center;
 	border: 2px solid white;
 	border-radius: 50%;
-	background-color: rgb(12,12, 51);
+	background-color: rgb(12, 12, 51);
 	color: red;
 	margin-left: 10px;
 	margin-right: 10px;
@@ -134,6 +134,8 @@ a:hover{
 }
 #intro{
 	line-height: 50px;
+}
+
 
 }
 /*responsive at min*/
@@ -172,6 +174,8 @@ a:hover{
     	margin-top: 25px;
     	margin-bottom: 15px;
     }
+}
+    
 /*========style for contact=======*/
 .contact-section{
 	height:100% ;
@@ -211,8 +215,8 @@ a:hover{
 
 }
 .enquiry{
-	font-size:17px ;
 	font-transform:uppercase ;
+	font-size:17px ;
 	font-weight: bold;
 	letter-spacing:3px ;
 	word-spacing: 2px;
@@ -222,7 +226,7 @@ a:hover{
 .form-content{
 	padding-top: 20px;
 }
-#fname,#lname,#mobile{
+#fname, #lname, #mobile{
 	width:40% ;
 	padding: 10px;
 	margin:5px 0px ;
@@ -454,7 +458,7 @@ textarea{
 		width: 100%;
 }
 #cv-wall{
-	background image: url(wbc.jpg);
+	background image: url("wbc.jpg");
 	width: 100%;
 	height: 100vh;
 	background-size: cover;
@@ -475,6 +479,8 @@ footer{
 }
 #menu-portfolio{
 	height: 30vh;
+}
+
 }
 /*sitereport section*/
 .sitereport-section{
@@ -515,14 +521,14 @@ footer{
 	height: 400px;
 	align-items: center;
 }
-.validation-report,.images-progress{
+.validation-report, .images-progress{
 	padding: 10px 15px;
 }
 .images-progress{
 	background-color: rgb(245, 231, 215);
 	dispaly: block;
 }
-.screenshots{
+.screenshot{
 	display: flex;
 	padding: 5px;
 }
@@ -553,6 +559,8 @@ footer{
 .screenshot-imagee{
 	display: block;
 	padding: 5px;
+}
+
 }
 @media screen and(max-width: 550px){
 
