--- a/style.css
+++ b/style.css
@@ -423,7 +423,7 @@ textarea{
 		border: 1px solid white;
 		border-radius: 50%;
 		height: 200px;
-		align-items: center;
+/		align-items: center;
 	}
 	.name{
 		padding-right: 20px;
@@ -458,7 +458,7 @@ textarea{
 		width: 100%;
 }
 #cv-wall{
-	background image: url("wbc.jpg");
+	background color: url("wbc.jpg");
 	width: 100%;
 	height: 100vh;
 	background-size: cover;
